--- a/package.json
+++ b/package.json
@@ -20,9 +20,14 @@
   "homepage": "https://github.com/AdiAdya/tutorchase-clone#readme",
   "dependencies": {
     "@nestjs/config": "^4.0.1",
+    "@nestjs/jwt": "^11.0.0",
+    "@nestjs/passport": "^11.0.5",
     "@nestjs/typeorm": "^11.0.0",
+    "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
     "pg": "^8.13.3",
     "typeorm": "^0.3.21"
   }
